# reddit-downloader-web

./: .gitignore  Dockerfile  LICENSE  app.py  flake.nix  pyproject.toml  requirements.txt
reddit_downloader_web/: app.py
reddit_downloader_web/templates/: error.html
templates/: error.html  main.html
